--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,44 +9,68 @@
 		<link rel="stylesheet" href="css/styles.css">
 		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" id="color"/>
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.js"></script>
 		<script src="js/angular.min.js"></script>
 		<!--<script src="js/script.js"></script>-->
 	</head>
-	<body ng-app="loginApp">
-	<header>
-		<nav id="header-nav" class="navbar navbar-default">
-				<div class="container">
-					<div class="navbar-header">
-						<a href="index.html" class="pull-left visible-md visible-lg">
+<body ng-app="loginApp">
+	<!--<header>-->
+		<nav id="header-nav" class="navbar default navbar-light bg-faded">
+			<div class="container">
+				<div class="navbar-header">
+						<!--<a href="index.html" class="pull-left visible-md visible-lg">
 							<div id="logo-img"  alt="Logo image"></div>
 						</a>
-						<div class="navbar-brand" ng-controller="LoginCtrl">
-							<a href="index.html"><h1>ShowYourSkillz</h1></a>
-							<p>
-								<label> username </label>
-								<input type="text" id="username" ng-model="user">
-								<button ng-click="check()" class = btn btn-click type="submit" id="login">login</button>
-							</p>
-							<p>
-								<span>message is : {{message}}</span>
-							</p>
-						</div>
-					</div>
+						<div class="navbar-brand" ng-controller="LoginCtrl">id="btnLogin"-->
+					<a class="navbar-brand" href="index.html">ShowYourSkillz</a>
 				</div>
-			</nav>
-		</header>
+				<div class="collapse navbar-collapse" id="myNavbar">
+	               	<ul class="nav navbar-nav pull-right">
+               		    <li class="nav-item dropdown" id="menuLogin">
+                          	<a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="navbarDropdownMenuLink" aria-haspopup="true" aria-expanded="false">Login</a>
+                          	<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="padding:17px;">
+              					<form class="form-inline" id="formLogin" ng-controller="LoginCtrl">
+              						<p> 
+                						<input class="form-control" name="username" id="username" type="text" placeholder="Username" ng-model="user">
+                					</p>
+                					<p>
+                						<input class="form-control" name="password" id="password" type="password" placeholder="Password" ng-model="pass">
+                					</p>
+                					<button class="btn btn-outline-success" type="submit" ng-click="check()" >Login</button>
+              					</form>
+            				</div>
+                       	</li>
+                       	<li>
+                     		<a href="#SignUp">SignUp</a>
+                       	</li>
+                   	</ul>
+						<!--<p>
+							<label> username </label>
+							<input type="text" id="username" ng-model="user">
+							<button ng-click="check()" class = btn btn-click type="submit" id="login">login</button>
+						</p>
+						<p>
+							<span>message is : {{message}}</span>
+						</p>-->
+				</div>
+			</div>
+				<!--</div>-->
+		</nav>
+	<!--</header>-->
 	<script>
 	var app = angular.module('loginApp',[]);
 
 	app.controller('LoginCtrl',function($scope,$http, $window) {
 		$scope.message = "nitin";
-		//$scope.user.username=username;
+		//$scope.user.username=username
 
 		$scope.check = function () {
 			var dataObj = {
-				username : $scope.user
+				username : $scope.user,
+				password : $scope.pass
 			};
 			//$scope.dataObj.username=$scope.user;
 			//var dataObj=$scope.user;
@@ -55,7 +79,7 @@
 				$scope.access = data;
 				if ($scope.access.allow == "yes") {
 					//$scope.message = "allowed";
-					var url = "http://" + $window.location.host + "/html/loggedIn.html"
+					var url = "http://" + $window.location.host + "/html/home.html"
 					$window.location.href = url;
 				}
 				else {
