--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -4,7 +4,7 @@
   <!--<link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet' type='text/css'>
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/css/bootstrap-switch.css' rel='stylesheet' type='text/css'>
   <link href='http://davidstutz.github.io/bootstrap-multiselect/css/bootstrap-multiselect.css' rel='stylesheet' type='text/css'>-->
-  <link href='SignUpStyle.css' rel='stylesheet' type='text/css'>
+  <link href='../css/SignUpStyle.css' rel='stylesheet' type='text/css'>
   <script src='../js/jquery.min.js' type='text/javascript'></script>
   <script src='../js/bootstrap.min.js' type='text/javascript'></script>
   <!--<script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/js/bootstrap-datepicker.min.js' type='text/javascript'></script>
