--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -5,8 +5,9 @@
   <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/css/bootstrap-switch.css' rel='stylesheet' type='text/css'>
   <link href='http://davidstutz.github.io/bootstrap-multiselect/css/bootstrap-multiselect.css' rel='stylesheet' type='text/css'>-->
   <link href='../css/SignUpStyle.css' rel='stylesheet' type='text/css'>
-  <script src='../js/jquery.min.js' type='text/javascript'></script>
-  <script src='../js/bootstrap.min.js' type='text/javascript'></script>
+  <script src="../js/jquery-2.1.4.min.js"></script>
+  <script src="../js/bootstrap.js"></script>
+  <script src="../js/angular.min.js"></script>
   <!--<script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/js/bootstrap-datepicker.min.js' type='text/javascript'></script>
   <script src='//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/js/bootstrap-switch.min.js' type='text/javascript'></script>
   <script src='http://davidstutz.github.io/bootstrap-multiselect/js/bootstrap-multiselect.js' type='text/javascript'></script>-->
@@ -18,49 +19,49 @@
         <h5>ShowYourSkillz - SignUp</h5>
       </div>
       <div class='panel-body'>
-        <form class='form-horizontal' role='form'>
+        <form class='form-horizontal' role='form' ng-app="signUpApp" ng-controller="signUpCntrl">
           <div class='form-group'>
-            <label class='control-label col-md-2 col-md-offset-2' for='id_title'>Name</label>
+            <label class='control-label col-md-2 col-md-offset-2' for='id_first_name'>Name</label>
             <div class='col-md-8'>
               <div class='col-md-4 indent-small'>
                 <div class='form-group internal'>
-                  <input class='form-control' id='id_first_name' placeholder='First Name' type='text'>
+                  <input class='form-control' id='id_first_name' placeholder='First Name' type='text' ng-model="f_name">
                 </div>
               </div>
               <div class='col-md-4 indent-small'>
                 <div class='form-group internal'>
-                  <input class='form-control' id='id_last_name' placeholder='Last Name' type='text'>
+                  <input class='form-control' id='id_last_name' placeholder='Last Name' type='text' ng-model="l_name">
                 </div>
               </div>
             </div>
           </div>
           <!--Address Section Starts-->
           <div class='form-group'>
-            <label class='control-label col-md-2 col-md-offset-2' for='Address'>Address</label>
+            <label class='control-label col-md-2 col-md-offset-2' for='AddressLine1'>Address</label>
             <div class='col-md-6'>
               <div class='form-group'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='AddressLine1' placeholder='Address Line1' type='text'>
+                  <input class='form-control' id='AddressLine1' placeholder='Address Line1' type='text' ng-model="addr1">
                 </div>
               </div>
               <div class='form-group internal'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='AddressLine2' placeholder='Address Line2' type='text'>
+                  <input class='form-control' id='AddressLine2' placeholder='Address Line2' type='text' ng-model="addr2">
                 </div>
               </div>
               <div class='col-md-4 indent-small'>
                 <div class='form-group internal'>
-                  <input class='form-control' id='City' placeholder='City' type='text'>
+                  <input class='form-control' id='City' placeholder='City' type='text'ng-model="city">
                 </div>
               </div>
               <div class='col-md-4 indent-small'>
                 <div class='form-group internal'>
-                  <input class='form-control' id='State' placeholder='State' type='text'>
+                  <input class='form-control' id='State' placeholder='State' type='text' ng-model="state">
                 </div>
               </div>
               <div class='col-md-3 indent-small'>
                 <div class='form-group internal'>
-                  <input class='form-control' id='Zip_code' placeholder='Zipcode' type='text'>
+                  <input class='form-control' id='Zip_code' placeholder='Zipcode' type='text' ng-model="zipcode">
                 </div>
               </div>
             </div>
@@ -71,12 +72,12 @@
             <div class='col-md-6'>
               <div class='form-group'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='id_email' placeholder='E-mail' type='text'>
+                  <input class='form-control' id='id_email' placeholder='E-mail' type='email' ng-model="email">
                 </div>
               </div>
               <div class='form-group internal'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='id_phone' placeholder='Phone: (xxx) - xxx xxxx' type='text'>
+                  <input class='form-control' id='id_phone' placeholder='Phone: (xxx) - xxx xxxx' type='text' ng-model="ph_number">
                 </div>
               </div>
             </div>
@@ -86,7 +87,7 @@
             <div class='col-md-6'>
               <div class='form-group'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='password' placeholder='Password' type='password'>
+                  <input class='form-control' id='password' placeholder='Password' type='password' ng-model="pass">
                 </div>
               </div>
             </div>
@@ -96,23 +97,56 @@
             <div class='col-md-6'>
               <div class='form-group'>
                 <div class='col-md-11'>
-                  <input class='form-control' id='confirm_password' placeholder='Confirm Password' type='password'>
+                  <input class='form-control' id='confirm_password' placeholder='Confirm Password' type='password' ng-model="pass">
                 </div>
               </div>
             </div>
           </div>
           <div class='form-group'>
-            <div class='col-md-offset-4 col-md-5'>
-              <button class='btn-lg btn-primary' type='submit'>Register</button>
+            <div class='col-md-offset-4 col-md-4'>
+              <button class='btn-lg btn-primary' type='submit' ng-click="register()">Register</button>
             </div>
-            <div class='col-md-3'>
-              <button class='btn-lg btn-danger' type='submit'>Cancel</button>
+            <div class='col-md-2'>
+              <button class='btn-lg btn-danger' type='submit' ng-click="cancel()">Cancel</button>
             </div>
           </div>     
         </form>
       </div>
     </div>
   </div>
+  <script>
+    var app = angular.module('signUpApp',[]);
+
+    app.controller('signUpCntrl',function($scope,$http, $window) {
+
+      $scope.register = function () {
+        var dataObj = {
+          username : $scope.email,
+          password : $scope.pass,
+          address: {addressLine1: $scope.addr1,addressLine2: $scope.addr2,
+                    city: $scope.city, state: $scope.state, zip_code: $scope.zipcode},
+          fname: $scope.f_name,
+          lname: $scope.l_name,
+          phoneNumber: $scope.ph_number
+        };
+        var res = $http.post('/signup', dataObj);
+        res.success(function (data, status, headers, config){
+            alert("user created");
+            var url = "http://" + $window.location.host + "/index.html";
+            $window.location.href = url;
+        });
+        res.error(function (data,status) {
+          alert("user not created");
+        });
+      };
+    });
+
+    $scope.click = function () {
+      var url = "http://" + $window.location.host + "/index.html";
+      $window.location.href = url;
+    }
+
+  </script>
 </body>
 </html>
 <!--style='float:right'>-->
