added profile page

--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -30,7 +30,7 @@
                 <div class="collapse navbar-collapse" id="myNavbar">
                     <ul class="nav navbar-nav pull-right">
                         <li class="btn-group" id="menuLogin">
-                            <button type="text" class="btn btn-primary">Welcome, {{name}}</button>
+                            <button type="text" class="btn btn-primary" Style="text-transform: Capitalize;">Welcome, {{name}}</button>
                             <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 <span class="caret"></span>
                                 <span class="sr-only">Toggle Dropdown</span>
@@ -40,7 +40,7 @@
                             </button>-->
                             <div class="dropdown-menu">
                                 <p>
-                                    <a class="tn btn-outline-success" href="#">Profile</a>
+                                    <a class="tn btn-outline-success" href="profilePage.html">Profile</a>
                                 </p>
                                 <div class="dropdown-divider">
                                     <a href="#" type="submit" ng-click="logout()">Logout</a>
