--- a/src/main/resources/static/index - new.html
+++ b/src/main/resources/static/index - new.html
@@ -10,19 +10,28 @@
 		<link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="css/color/color-1.css" id="color"/>
+		<link rel="stylesheet" type="text/css" href="assets/css/color/color-1.css" id="color"/>
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.js"></script>
 		<script src="js/angular.min.js"></script>
 		<script src="js/script.js"></script>
-		<!--<script src="js/app.js"></script>
-		<script src="js/controller.js"></script>-->
 	</head>
 	<body ng-app="loginApp">
 		<nav id="header-nav" class="navbar default navbar-light bg-faded">
 			<div class="container">
 				<div class="navbar-header">
 					<a class="navbar-brand" href="index.html">ShowYourSkillz</a>
+					<!--<button type="button" class="navbar-toggle mob-menu" data-toggle="collapse" data-target="#myNavbar">
+                        	<span class="icon-bar"></span>
+                        	<span class="icon-bar"></span>
+                        	<span class="icon-bar"></span>
+
+                    	</button>
+                    	<div class="mobile-sidebar">                                                  
+                        	<span class="sidebar-btn btn fa-bar-hide" data-action="toggle" data-side="right">
+                            	<i class="fa fa-bars"></i>
+                        	</span>                  
+                    	</div>-->
 				</div>
 				<div class="collapse navbar-collapse" id="myNavbar" ng-controller="LoginCtrl">
 	               	<ul class="nav navbar-nav pull-right">
@@ -50,4 +59,3 @@
 	</body>
 </html>
 	
-
