--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -24,7 +24,7 @@
                 <div class="navbar-header col-sm-2 col-xs-2 col-md-2">
                     <a class="navbar-brand" href="/html/home.html">ShowYourSkillz</a></li>
                 </div>
-            <div class="nav pull-right col-sm-2 col-xs-2 col-md-2 col-lg-3">
+            <div class="nav pull-right col-sm-4 col-xs-5 col-md-3">
                 <ul class="nav navbar-nav pull-right">
                     <li class="btn-group" id="menuLogin">
                         <button type="text" class="btn btn-primary" style="text-transform: Capitalize;">Welcome, {{name}}</button>
