added sweet alert

--- a/src/main/resources/static/html/signup_page.html
+++ b/src/main/resources/static/html/signup_page.html
@@ -2,14 +2,12 @@
 <html>
   <head>
     <link href='../css/bootstrap.min.css' rel='stylesheet' type='text/css'>
-    <!--<link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.2.0/css/datepicker.min.css' rel='stylesheet' type='text/css'>
-    <link href='//cdnjs.cloudflare.com/ajax/libs/bootstrap-switch/1.8/css/bootstrap-switch.css' rel='stylesheet' type='text/css'>
-    <link href='http://davidstutz.github.io/bootstrap-multiselect/css/bootstrap-multiselect.css' rel='stylesheet' type='text/css'>-->
     <link href='../css/SignUpStyle.css' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="../css/sweetalert2.min.css">
+    <script src="../js/sweetalert2.min.js"></script>
     <script src="../js/jquery-2.1.4.min.js"></script>
     <script src="../js/bootstrap.js"></script>
     <script src="../js/angular.min.js"></script>
-    <script src="../js/script.js"></script>
   </head>
   <body ng-app="signUpApp">
     <div class='container'>
@@ -136,6 +134,6 @@
         </div>
       </div>
     </div>
+    <script src="../js/script.js"></script>
   </body>
 </html>
-<!--style='float:right'>-->
