--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -5,18 +5,15 @@
         <meta http-equiv="X-UA-Compartible" content="IE-edge">
         <meta name="viewport" content="width-device-width, initial-scale=1">
         <title>ShowYourSkillz</title>
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
+        <link rel="stylesheet" href="../css/bootstrap.min.css" media="screen" > 
         <link rel="stylesheet" href="../css/homestyle.css">
         <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-        <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color"/>
+        <link rel="stylesheet" type="text/css" href="../css/color/color-1.css" id="color">
+        <link rel="stylesheet" href="../css/sweetalert2.min.css">
+        <script src="../js/sweetalert2.min.js"></script>
         <script src="../js/jquery-2.1.4.min.js"></script>
-        <script src="../js/bootstrap.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
         <script src="../js/angular.min.js"></script>
-        <script src="../js/script.js"></script>
-        <!--<script src="../js/app.js"></script>
-        <script src="../js/controller.js"></script>-->
     </head>
     <body ng-app="home" ng-controller="homeCntrl">
         <nav id="header-nav" class="navbar default navbar-light bg-faded">
@@ -44,5 +41,6 @@
                 </ul>
             </div>
         </nav>
+        <script src="../js/script.js"></script>       
     </body>
 </html>
