--- a/src/main/resources/static/html/profilePage.html
+++ b/src/main/resources/static/html/profilePage.html
@@ -44,7 +44,7 @@
       </div>
     </nav>
     <div class="wrapper">
-      <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2">
+      <div class="col-lg-2 col-sm-3 col-xs-3 col-md-2" id="sideList">
         <div class="grid1">
           <div class="grid1elements">
             <h3>Your Profile</h3>
@@ -52,7 +52,7 @@
             <h4 style="text-transform: Capitalize;">{{f_name}} {{l_name}}</h4>
             <div class="flowers-wrap"> 
               <form>
-                <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.05em; margin-top: 20px;font-family: 'Helvetica';">Manage Profile</label><br>
+                <label style="font-size:16px; margin-bottom:10px; letter-spacing: 0.1em; margin-top: 20px;font-family: 'Impact';font-weight: 100;">Manage Profile</label><br>
                 <label style="font-size:13px; margin-bottom:10px; letter-spacing: 0.05em; font-family: 'Helvetica'">Manage Courses</label><br>
               </form>                                 
             </div>
