--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,6 +11,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/color/color-1.css" id="color"/>
+		<link rel="stylesheet" href="css/sweetalert2.min.css">
+        <script src="js/sweetalert2.min.js"></script>
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/bootstrap.js"></script>
 		<script src="js/angular.min.js"></script>
@@ -21,7 +23,7 @@
 	<body ng-app="loginApp">
 		<nav id="header-nav" class="navbar default navbar-light bg-faded">
 			<div class="container">
-				<div class="navbar-header col-sm-2 col-xs-2 col-md-2">
+				<div class="navbar-header col-sm-2 col-xs-1 col-md-2">
 					<a class="navbar-brand" href="index.html">ShowYourSkillz</a>
 				</div>
 				<div class="nav pull-right" id="myNavbar" ng-controller="LoginCtrl">
